--- a/force-app/main/default/classes/IntegrationPatientTriggerHandler.cls
+++ b/force-app/main/default/classes/IntegrationPatientTriggerHandler.cls
@@ -34,12 +34,17 @@ public with sharing class IntegrationPatientTriggerHandler {
             sdhStatusMap.put(sdhStatus.Label.remove(' '), sdhStatus);
         }
         Map<String, Participant_Study_Enrollment__c> pseMap = new Map<String, Participant_Study_Enrollment__c>();
+        List<PSE_Status_History__c> historyList = new List<PSE_Status_History__c>();
         for(Participant_Study_Enrollment__c pse : pseList){
             pseMap.put(pse.External_Key__c, pse);
         }
         for(Integration_Patient__c patient : newList){
             if(pseMap.containsKey(patient.External_ID__c)) {
-                pseMap.get(patient.External_ID__c).Status__c = getPSEStatus(sdhStatusMap, patient);
+                PSE_Status_History__c history = new PSE_Status_History__c();
+                history.Changed_Date__c = patient.Subject_Date__c;
+                history.Status__c = getPSEStatus(sdhStatusMap, patient);
+                history.PSE__c = pseMap.get(patient.External_ID__c).Id;
+                historyList.add(history);
                 if (patient.IsDeletedInSDH__c == 'N') {
                     pseMap.get(patient.External_ID__c).IsSubjectIDverifiedInSDH__c = true;
                 } else {
@@ -48,6 +53,7 @@ public with sharing class IntegrationPatientTriggerHandler {
             }
         }
         update pseMap.values();
+        insert historyList;
     }
 
     private static String getPSEStatus(Map<String, SDH_Status__mdt> sdhStatusMap, Integration_Patient__c patient){
