PEH-440 PEH-437 PEH-743 PEH-745 prevent Delegate from changing opt-in option

--- a/force-app/main/default/classes/AccountSettingsController.cls
+++ b/force-app/main/default/classes/AccountSettingsController.cls
@@ -89,12 +89,15 @@ public without sharing class AccountSettingsController {
     }
 
     @AuraEnabled
-    public static Boolean changeOptInVisitResults() {
+    public static Boolean changeOptInVisitResults(String contactId, Boolean isOptIn) {
         try {
-            Contact currentContact = getCurrentContact();
-            currentContact.Visit_Results_Opt_In__c = !currentContact.Visit_Results_Opt_In__c;
-            update currentContact;
-            return currentContact.Visit_Results_Opt_In__c;
+            if(!PatientDelegateService.getInstance().isDelegate()) {
+                ((DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class))
+                        .updateRecord(new Contact(Id = contactId, Visit_Results_Opt_In__c = isOptIn), true);
+                return isOptIn;
+            } else {
+                return !isOptIn;
+            }
         } catch (Exception e) {
             AuraHelper.throwException(e);
         }
