--- a/force-app/main/default/classes/Test_IntegrationVisitResultHandler.cls
+++ b/force-app/main/default/classes/Test_IntegrationVisitResultHandler.cls
@@ -5,9 +5,12 @@
 @IsTest
 private class Test_IntegrationVisitResultHandler {
 
-    /*@TestSetup
+    @TestSetup
     static void setup() {
-        ParticipantEnrollmentFactory.createParticipantStudyEnrollmentRecords('1',2,3,3);
+        Account acc = new Account();
+        acc.Name = CommunityService.COMMUNITY_PARTICIPANT_ACCOUNT_NAME;
+        insert acc;
+        ParticipantEnrollmentFactory.createParticipantEnrollmentRecords('1',2,3,3);
     }
 
     @IsTest
@@ -33,6 +36,6 @@ private class Test_IntegrationVisitResultHandler {
         externalVisitResult.Vital_or_Lab__c = 'Vital';
         insert externalVisitResult;
         update externalVisitResult;
-    }*/
+    }
 
 }
