--- a/force-app/main/default/classes/Test_IntegrationPatientTriggerHandler.cls
+++ b/force-app/main/default/classes/Test_IntegrationPatientTriggerHandler.cls
@@ -1,8 +1,11 @@
 @IsTest
 private class Test_IntegrationPatientTriggerHandler {
 
-    /*@TestSetup
+    @TestSetup
     static void setup() {
+        Account acc = new Account();
+        acc.Name = CommunityService.COMMUNITY_PARTICIPANT_ACCOUNT_NAME;
+        insert acc;
         ParticipantEnrollmentFactory.createParticipantEnrollmentRecords('1',2,3,3);
     }
 
@@ -11,11 +14,13 @@ private class Test_IntegrationPatientTriggerHandler {
         Integration_Patient__c externalPatient = new Integration_Patient__c();
         externalPatient.External_ID__c = '1~2~3';
         externalPatient.Subject_Status__c = 'Completed';
+        externalPatient.Subject_Date__c = Date.today().addDays(1);
         Test.startTest();
         insert externalPatient;
         System.assertEquals('Participation Complete', getPseStatus());
         externalPatient.IsDeletedInSDH__c = 'N';
         externalPatient.Subject_Status__c = 'Dropped';
+        externalPatient.Subject_Date__c = Date.today().addDays(2);
         update externalPatient;
         System.assertEquals('Drop Out', getPseStatus());
         Test.stopTest();
@@ -29,5 +34,5 @@ private class Test_IntegrationPatientTriggerHandler {
                 WHERE   External_Key__c = '1~2~3'
         ];
         return pse.Status__c;
-    }*/
+    }
 }
